2011-04-21  Tony Gentilcore  <tonyg@chromium.org>

        [chromium] inspector/console/console-log-before-inspector-open.html times out on mac
        https://bugs.webkit.org/show_bug.cgi?id=59106

        Seems to have started timing out in 84470-84471 which were expectations
        updates.

        * platform/chromium/test_expectations.txt:

2011-04-21  Adam Barth  <abarth@webkit.org>

        Reviewed by Tony Gentilcore.

        Make test robust to PHP magic quotes
        https://bugs.webkit.org/show_bug.cgi?id=59104

        * http/tests/security/contentSecurityPolicy/report-uri-expected.txt:
        * http/tests/security/contentSecurityPolicy/report-uri-from-child-frame-expected.txt:
        * http/tests/security/contentSecurityPolicy/resources/save-report.php:

2011-04-21  Tony Gentilcore  <tonyg@chromium.org>

        [chromium] Temporarily skip new contentSecurityPolicy tests
        https://bugs.webkit.org/show_bug.cgi?id=59103

        Tests introduced by http://trac.webkit.org/changeset/84478

        * platform/chromium/test_expectations.txt:

2011-04-20  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Expose console API to the code evaluated by sidebar.setExpression()

        Web Inspector: [Extensions API] console API is not exposed to code evaluated by sidebar.setExpression()
        https://bugs.webkit.org/show_bug.cgi?id=59006

        * inspector/extensions/extensions-expected.txt:
        * inspector/extensions/extensions.html:

2011-04-21  Tony Gentilcore  <tonyg@chromium.org>

        [chromium] Correct expecations for editing/selection/designmode-no-caret.html
        https://bugs.webkit.org/show_bug.cgi?id=59088

        Straighten out bad override in designmode-no-caret.html

        * platform/chromium/test_expectations.txt:

2011-04-21  Adam Roben  <aroben@apple.com>

        Skip some newly-failing tests on Windows
